--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,17 +1,53 @@
+:root {
+  --bg: #f9f7f7;
+  --second: #dbe2ef;
+  --third: #3f72af;
+  --fourth: #112d4e;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  height: 100svh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+  height: 100svh;
+  overflow: hidden;
+  background-color: var(--bg);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .container {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+
+  height: 100%;
+  margin-top: 4rem;
+  gap: 2rem;
+}
+
+.container > a {
+  background-color: var(--second);
+  padding: 1rem;
+  text-decoration: none;
+  border-radius: 1rem;
+  width: 100%;
+  text-align: center;
+  color: var(--third);
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+.container > div {
+  background-color: var(--second);
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 100%;
+  text-align: center;
 }
