--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,9 +12,8 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 2fr 3fr 2fr;
 
   height: 100svh;
   overflow: hidden;
@@ -22,7 +21,16 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-body > p {
+svg {
+  width: 24px;
+  height: auto;
+}
+
+.formContainer {
+  grid-area: 1/2;
+}
+
+.formContainer > p {
   margin-top: 4rem;
   margin-bottom: 2rem;
   font-size: 1.5rem;
@@ -32,6 +40,7 @@ body > p {
   font-weight: bold;
   font-style: italic;
   background-color: var(--second);
+  text-align: center;
 }
 
 form {
@@ -40,7 +49,7 @@ form {
   gap: 2rem;
   padding: 1rem;
   background-color: var(--second);
-  width: 30vw;
+  width: 100%;
   border-radius: 1rem;
   position: relative;
 }
@@ -53,6 +62,7 @@ form {
   height: 100%;
   margin-top: 4rem;
   gap: 2rem;
+  grid-area: 1/2;
 }
 
 .container > a {
@@ -69,11 +79,15 @@ form {
 }
 
 .container > div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+
   background-color: var(--second);
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 1rem;
   width: 100%;
   text-align: center;
+  gap: 2rem;
 }
 
 .btnContainer {
@@ -84,6 +98,10 @@ form {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.btnContainer > * {
+  cursor: pointer;
 }
 
 .btnContainer a {
@@ -135,5 +153,42 @@ form {
   border-radius: 0.5rem;
   border: 1px solid var(--third);
   width: 50%;
+  height: 200px;
   font-size: 1.5rem;
+}
+
+.messageCard {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  color: var(--fourth);
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.to {
+  border-bottom: 1px solid;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+.to span {
+  font-style: italic;
+  font-weight: bolder;
+}
+
+.footCard {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid var(--fourth);
+  padding: 0.5rem;
+  font-size: 0.7rem;
+  text-align: center;
+  font-style: italic;
+}
+
+.message {
+  height: 100px;
+  padding: 0.5rem;
 }
