--- a/views/details.ejs
+++ b/views/details.ejs
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="detailsContainer">
+      <h1 style="margin-bottom: 2rem; background-color: ">Message Details</h1>
+      <table>
+        <tr>
+          <th scope="col">Sent for</th>
+          <th scope="col" class="middle">Message</th>
+          <th scope="col">Date Added</th>
+        </tr>
+        <tr>
+          <th scope="row"><%= message.to %></th>
+          <th class="middle"><%= message.text %></th>
+          <th><%= message.added %></th>
+        </tr>
+      </table>
+      <a href="/" class="detailsHome">Back</a>
+    </div>
+  </body>
 </html>
