--- a/views/messageCard.ejs
+++ b/views/messageCard.ejs
@@ -2,7 +2,7 @@
   <p class="to"><span>To: <%= to %></span></p>
   <p class="message"><%= message %></p>
   <div class="footCard">
-    <a href="/details"
+    <a href="/details/<%= id %>"
       ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <title>open-in-new</title>
         <path
