--- a/views/details.ejs
+++ b/views/details.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="detailsContainer">
-      <h1 style="margin-bottom: 2rem; background-color: ">Message Details</h1>
+      <h1 style="margin-bottom: 2rem">Message Details</h1>
       <table>
         <tr>
           <th scope="col">Sent for</th>
