feat: converted to db AGAIN because of git issues

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -16,9 +16,9 @@
           <th scope="col">Date Added</th>
         </tr>
         <tr>
-          <th scope="row"><%= message.to %></th>
-          <th class="middle"><%= message.text %></th>
-          <th><%= message.added %></th>
+          <th scope="row"><%= message.receiver %></th>
+          <th class="middle"><%= message.message %></th>
+          <th><%= message.date %></th>
         </tr>
       </table>
       <a href="/" class="detailsHome">Back</a>
