--- a/views/form.ejs
+++ b/views/form.ejs
@@ -17,7 +17,13 @@
         </div>
         <div class="formInput">
           <label for="text">Message</label>
-          <textarea id="text" name="text" required></textarea>
+          <textarea
+            id="text"
+            name="text"
+            cols="27"
+            rows="3"
+            required
+          ></textarea>
         </div>
         <div class="btnContainer">
           <a href="/">Back</a>
